--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       href="/src/style.css"
       rel="stylesheet"
     />
+    <link
+      href="/src/assets/images/FinanzyLogo.png"
+      rel="icon"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
